# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

call_manager_path = "//base/telephony/call_manager"

ohos_shared_library("tel_cm_deps_adapter") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    cfi_vcall_icall_only = true
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "${call_manager_path}/services/deps_adapter/src/incoming_flash_reminder_adapter.cpp",
  ]

  include_dirs = [
    "${call_manager_path}/services/deps_adapter/adapter_type",
    "${call_manager_path}/services/deps_adapter/include",
  ]

  external_deps = [
    "screenlock_mgr:screenlock_client",
    "camera_framework:camera_framework",
    "ability_runtime:abilitykit_native",
    "graphic_surface:surface", # 被动引入头文件导致不得不依赖
    "core_service:libtel_common", # 日志需要
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "c_utils:utils", # rebase要求引入
  ]

  cflags_cc = [
    "-flto",
    # 看看是否需要添加什么
  ]

  ldflags = [
    # 看看是否需要添加什么
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManager\"",
    "LOG_DOMAIN = 0xD001F10",
    "LOG_TAG = \"CallManager\"",
  ]

  part_name = "call_manager"
  subsystem_name = "telephony"
}
