# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

call_manager_path = "//base/telephony/call_manager"

isNeedCamera = defined(global_parts_info) &&
  defined(global_parts_info.multimedia_camera_framework) &&
  global_parts_info.multimedia_camera_framework

isNeedScreenLock = defined(global_parts_info) &&
  defined(global_parts_info.theme_screenlock_mgr) &&
  global_parts_info.theme_screenlock_mgr &&

isNeedSms = defined(global_parts_info) &&
  defined(global_parts_info.telephony_sms_mms) &&
  global_parts_info.telephony_sms_mms

isNeedCompile = isNeedCamera || isNeedScreenLock || isNeedSms
if (isNeedCompile)
{
  ohos_shared_library("tel_cm_deps_adapter") {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      cfi_vcall_icall_only = true
    }
    branch_protector_ret = "pac_ret"

    include_dirs = [
      "${call_manager_path}/services/deps_adapter/include",
    ]

    sources = [
      "${call_manager_path}/services/deps_adapter/src/common_deps_adapter.cpp",
    ]

    external_deps = [
      "screenlock_mgr:screenlock_client",
      "camera_framework:camera_framework",
      "sms_mms:tel_sms_mms_api",
      "ability_runtime:abilitykit_native",
      "hilog:libhilog",
      "hisysevent:libhisysevent",
      "hitrace:hitrace_meter",
      "hitrace:libhitracechain",
      "c_utils:utils", # 以下为头文件依赖引入。
      "graphic_surface:surface",
      "core_service:libtel_common",
    ]

    cflags_cc = [
      "-fno-asynchronous-unwind-tables", 
      "-fno-unwind-tables",
      "-fvisibility=hidden",
    ]
    
    ldflags = []

    defines = [
      "TELEPHONY_LOG_TAG = \"CallManager\"",
      "LOG_DOMAIN = 0xD001F10",
      "LOG_TAG = \"CallManager\"",
    ]

    part_name = "call_manager"
    subsystem_name = "telephony"
  }
}