# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

group("fuzztest") {
  testonly = true
  deps = []
  deps += [ "audiodevice_fuzzer:fuzztest" ]
  deps += [ "bluetoothdialcall_fuzzer:fuzztest" ]
  deps += [ "call_fuzzer:fuzztest" ]
  deps += [ "callabilitycallback_fuzzer:fuzztest" ]
  deps += [ "callmanagerservicestub_fuzzer:fuzztest" ]
  deps += [ "callnotification_fuzzer:fuzztest" ]
  deps += [ "controlcamera_fuzzer:fuzztest" ]
  deps += [ "dialcall_fuzzer:fuzztest" ]
  deps += [ "formatphonenumber_fuzzer:fuzztest" ]
  deps += [ "formatphonenumbertoe164_fuzzer:fuzztest" ]
  deps += [ "isemergencyphonenumber_fuzzer:fuzztest" ]
  deps += [ "rejectcall_fuzzer:fuzztest" ]
  deps += [ "setaudiodevice_fuzzer:fuzztest" ]
  deps += [ "setcalltransferinfo_fuzzer:fuzztest" ]
  deps += [ "setpausepicture_fuzzer:fuzztest" ]
  deps += [ "startdtmf_fuzzer:fuzztest" ]
  deps += [ "telephonyinteraction_fuzzer:fuzztest" ]
}
