# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ohos_shared_library("tel_cm_deps_adapter_test_mock") {
  output_dir = "${target_out_dir}/mock_libs"
  install_enable = false
  testonly = true

  sources = [ "mock_deps_adapter.cpp" ]

  cflags = [ "-fPIC" ]
  cflags_cc = [ "-fPIC" ]

  subsystem_name = "telephony"
  part_name = "call_manager"
}