# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

group("unittest") {
  testonly = true
  deps = []
  deps += [ "call_manager_gtest:tel_call_manager1_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager2_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager3_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager4_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager5_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager6_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager7_gtest" ]
  deps += [ "call_manager_gtest:tel_call_manager8_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero1_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero2_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero3_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero4_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero5_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero6_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero7_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero8_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero9_gtest" ]
  deps += [ "call_manager_zero_gtest:tel_call_manager_zero10_gtest" ]
  deps += [ "ui_client:tel_call_manager_ui_test" ]
  deps += [ "call_earthquake_alarm_test:tel_call_earthquake_alarm_test" ]
  deps += [ "call_voice_assistant_test:tel_call_voice_assistant_test" ]
  deps += [ "distributed_communication_test:distributed_communication_test" ]
  deps += [ "call_manager_special_test:tel_call_manager_special1_test" ]
  deps += [ "call_manager_special_test:tel_call_manager_special2_test" ]
  deps += [ "call_manager_special_test:tel_call_manager_special3_test" ]
}
