# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/telephony/core_service/telephony.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("FormatPhoneNumberToE164FuzzTest") {
  module_output_path = "call_manager/FormatPhoneNumberToE164FuzzTest"
  module_out_path = module_output_path
  fuzz_config_file = "//base/telephony/call_manager/test/fuzztest/formatphonenumbertoe164_fuzzer"

  include_dirs = [
    "//base/telephony/call_manager/interfaces/innerkits",
    "//base/telephony/call_manager/services/audio/include",
    "//base/telephony/call_manager/services/audio/include/audio_state",
    "//base/telephony/call_manager/services/video/include",
    "//base/telephony/call_manager/services/bluetooth/include",
    "//base/telephony/call_manager/services/call/include",
    "//base/telephony/call_manager/services/call_manager_service/include",
    "//base/telephony/call_manager/services/call_setting/include",
    "//base/telephony/call_manager/services/telephony_interaction/include",
    "//base/telephony/call_manager/services/call_report/include",
    "//base/telephony/call_manager/services/video/include",
    "//base/telephony/call_manager/services/call/call_state_observer/include",
    "//base/telephony/call_manager/test/fuzztest/common_fuzzer",
    "//base/telephony/call_manager/frameworks/native/include",
    "//base/telephony/call_manager/frameworks/native/include",
    "//base/telephony/core_service/interfaces/innerkits/include",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [ "//base/telephony/call_manager:tel_call_manager" ]

  external_deps = [
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "data_share:datashare_consumer",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  defines += [
    "TELEPHONY_LOG_TAG = \"CallManagerFuzzTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "//base/telephony/call_manager/test/fuzztest/common_fuzzer/addcalltoken_fuzzer.cpp",
    "formatphonenumbertoe164_fuzzer.cpp",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":FormatPhoneNumberToE164FuzzTest",
  ]
}
###############################################################################
