# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/telephony/core_service/telephony.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("RejectCallFuzzTest") {
  module_output_path = "call_manager/RejectCallFuzzTest"
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/telephony/call_manager/test/fuzztest/rejectcall_fuzzer"

  include_dirs = []

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "//base/telephony/call_manager/frameworks/native:tel_call_manager_api",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "samgr_standard:samgr_proxy",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "rejectcall_fuzzer.cpp" ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":RejectCallFuzzTest",
  ]
}
###############################################################################
