# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("../../../callmanager.gni")
CALL_MANAGER_PATH = "../../.."

##############################fuzztest##########################################
ohos_fuzztest("StartDtmfFuzzTest") {
  module_output_path = "call_manager/call_manager"
  module_out_path = module_output_path
  fuzz_config_file = "${CALL_MANAGER_PATH}/test/fuzztest/startdtmf_fuzzer"
  include_dirs = [
    "${CALL_MANAGER_PATH}/interfaces/innerkits",
    "${CALL_MANAGER_PATH}/test/fuzztest/common_fuzzer",
  ]
  include_dirs += call_manager_include_dirs

  deps = [
    "${CALL_MANAGER_PATH}/frameworks/native:tel_call_manager_api",
    "//third_party/cJSON:cjson",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
  ]
  external_deps += call_manager_external_deps

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerFuzzTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  defines += call_manager_defines

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${CALL_MANAGER_PATH}/test/fuzztest/common_fuzzer/addcalltoken_fuzzer.cpp",
    "startdtmf_fuzzer.cpp",
  ]
  sources += call_manager_sources
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":StartDtmfFuzzTest",
  ]
}
###############################################################################
